Closed
Bug 1329044
Opened 9 years ago
Closed 9 years ago
Compiler bug in gcc <7.0 in TexUnpackSurface code (const auto& doesn't properly bind a scalar member of a temporary)
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: kvark, Assigned: kvark)
References
Details
(Whiteboard: [gfx-noted])
Attachments
(1 file, 1 obsolete file)
|
3.25 KB,
patch
|
jgilbert
:
review+
jcristau
:
approval-mozilla-aurora+
jcristau
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
> however, gcc versions earlier than 7 have a bug where this lifetime extension is not implemented for subobjects of scalar type: https://gcc.gnu.org/bugzilla/show_bug.cgi?id=54293
This applies to several cases in TexUnpackSurface implementation, like this one:
> const auto& rowLength = mSurf->GetSize().width;
Updated•9 years ago
|
Summary: Undefined behaviour with gcc6 in TexUnpackSurface code → Undefined behaviour with gcc <7.0 in TexUnpackSurface code
Updated•9 years ago
|
Summary: Undefined behaviour with gcc <7.0 in TexUnpackSurface code → Compiler bug in gcc <7.0 in TexUnpackSurface code (const auto& doesn't properly bind a member of a temporary)
| Assignee | ||
Comment 1•9 years ago
|
||
Assignee: nobody → kvark
Attachment #8824432 -
Flags: review?(jgilbert)
| Assignee | ||
Comment 2•9 years ago
|
||
Treherder status:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=25e6e1687d4b1910327e4457cd1781841496fcd5
Keywords: checkin-needed
Whiteboard: [gfx-noted]
Comment 3•9 years ago
|
||
need first a positive review before we can check this in
Keywords: checkin-needed
Updated•9 years ago
|
Flags: needinfo?(kvark)
| Assignee | ||
Updated•9 years ago
|
Status: NEW → ASSIGNED
Flags: needinfo?(kvark)
| Assignee | ||
Comment 4•9 years ago
|
||
Attachment #8825105 -
Flags: review?(jgilbert)
| Assignee | ||
Updated•9 years ago
|
Attachment #8824432 -
Attachment is obsolete: true
Attachment #8824432 -
Flags: review?(jgilbert)
Updated•9 years ago
|
Attachment #8825105 -
Flags: review?(jgilbert) → review+
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/d54ebcd1a796
Avoid taking const references to fields behind accessors. r=jgilbert
Keywords: checkin-needed
Updated•9 years ago
|
status-firefox51:
--- → affected
status-firefox52:
--- → affected
Comment 6•9 years ago
|
||
Comment on attachment 8825105 [details] [diff] [review]
Avoid taking const references to fields behind accessors.
Approval Request Comment
[Feature/Bug causing the regression]:
[User impact if declined]: Incorrect behavior on GCC builds. (Linux)
[Is this code covered by automated tests?]:
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]:
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]: No risk.
[Why is the change risky/not risky?]: Trivial change.
[String changes made/needed]: none
Attachment #8825105 -
Flags: approval-mozilla-beta?
Attachment #8825105 -
Flags: approval-mozilla-aurora?
Comment 7•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment 8•9 years ago
|
||
Comment on attachment 8825105 [details] [diff] [review]
Avoid taking const references to fields behind accessors.
workaround gcc bug affecting webgl, aurora52+, beta51+
Attachment #8825105 -
Flags: approval-mozilla-beta?
Attachment #8825105 -
Flags: approval-mozilla-beta+
Attachment #8825105 -
Flags: approval-mozilla-aurora?
Attachment #8825105 -
Flags: approval-mozilla-aurora+
Comment 9•9 years ago
|
||
| bugherder uplift | ||
Comment 10•9 years ago
|
||
| bugherder uplift | ||
Updated•9 years ago
|
Summary: Compiler bug in gcc <7.0 in TexUnpackSurface code (const auto& doesn't properly bind a member of a temporary) → Compiler bug in gcc <7.0 in TexUnpackSurface code (const auto& doesn't properly bind a scalar member of a temporary)
You need to log in
before you can comment on or make changes to this bug.
Description
•