Bug 1329044 - Avoid taking const references to fields behind accessors. r=jgilbert a=jcristau